2007-12-18  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Purge related pep nodes at remove_user
	* src/mod_pubsub/node_pep.erl: Likewise

2007-12-17  Badlop  <badlop@process-one.net>

	* src/ejabberd_zlib/Makefile.in: Compile all erl files found in
	the directory, so it isn't needed to provide an explicit list of
	target files
	* src/eldap/Makefile.in: Likewise
	* src/mod_irc/Makefile.in: Likewise
	* src/mod_muc/Makefile.in: Likewise
	* src/mod_proxy65/Makefile.in: Likewise
	* src/mod_pubsub/Makefile.in: Likewise
	* src/odbc/Makefile.in: Likewise
	* src/pam/Makefile.in: Likewise
	* src/stringprep/Makefile.in: Likewise
	* src/tls/Makefile.in: Likewise
	* src/web/Makefile.in: Likewise
	* src/ejabberd_zlib/Makefile.win32: Likewise
	* src/eldap/Makefile.win32: Likewise
	* src/mod_irc/Makefile.win32: Likewise
	* src/mod_muc/Makefile.win32: Likewise
	* src/mod_proxy65/Makefile.win32: Likewise
	* src/mod_pubsub/Makefile.win32: Likewise
	* src/odbc/Makefile.win32: Likewise
	* src/stringprep/Makefile.win32: Likewise
	* src/tls/Makefile.win32: Likewise
	* src/web/Makefile.win32: Likewise

	* doc/guide.tex: Remove 'ssl' option from documentation and
	configuration load (EJAB-461)
	* src/ejabberd_listener.erl: Likewise

	* src/msgs/cs.msg: Small typo (thanks to Lukas Polivka alias
	Spike411)

	* src/ejabberd.cfg.example: Small change in order of options

2007-12-15  Badlop  <badlop@process-one.net>

	* src/mod_irc/iconv.erl: Changed order of handle_info
	clause (EJAB-290)
	* src/stringprep/stringprep.erl: Likewise

	* src/eldap/eldap.erl: Removed handle_sync_event clause because it
	is never called (EJAB-290)

	* src/mod_irc/mod_irc.erl: No need to translate copyright notice
	* src/mod_muc/mod_muc.erl: Likewise
	* src/mod_proxy65/mod_proxy65_service.erl: Likewise
	* src/mod_pubsub/mod_pubsub.erl: Likewise
	* src/mod_vcard.erl: Likewise
	* src/mod_vcard_ldap.erl: Likewise
	* src/mod_vcard_odbc.erl: Likewise
	* src/msgs/*.msg: Likewise